@@ -9,6 +9,7 @@ Change Log
       replaced with explicit "colour" parameter to all draw methods.
     - Removed height member from FontBase and transplanted all methods to
       PackedFontBase, making FontBase data free.
+    - Minor tidying in gadget.cpp.
   
   - New Features:
   
